# 3D_rendering

./: CMakeLists.txt  example.txt
3D_rendering_clips/: rotating_cheespiece.webm  rotating_cube_shades.webm  rotating_seahawk.webm  rotating_space_ship.webm  rotating_teapot.webm
lib/: RGB.h  SFMLhandler.h  headers.h  math.h  math3D.h  matrix4x4.h  mesh.h  point2D.h  readUART.h  render.h  robot.h  triangle3D.h  vec.h  vec3D.h  vec4.h
robot_arm_obj/: accuator_v2.mtl  base_v2.mtl  link_1_v2.mtl  link_2_v2.mtl  link_3_v2.mtl  link_4_v2.mtl  link_5_v2.mtl
src/: SFMLhandler.cpp  main.cpp  math.cpp  math3D.cpp  matrix4x4.cpp  mesh.cpp  readUART.cpp  render.cpp  robot.cpp  triangle3D.cpp  vec.cpp  vec3D.cpp  vec4.cpp
